--- a/quiz.css
+++ b/quiz.css
@@ -4,14 +4,11 @@
   margin: 0 auto;
 }
 .question {
+  box-shadow: 2px 2px 2px 1px; 
   background: #efefef;
   border-radius: 10px;
   margin-top: 40px;
-  padding-top: 0px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  box-shadow: 5px 5px 9px 0 #cccccc
+  padding: 0px 20px 20px 20px;
 }
 
 /* (B) QUESTION */
@@ -152,6 +149,7 @@
   cursor: pointer;
   max-width:600px; 
   word-wrap:break-word;
+  z-index: 2;
 }
 
 .correctAnswer{
@@ -170,6 +168,8 @@
 }
 
 .quizNumber{
+  box-shadow: 3px 3px 0px 2px #474747;
+  opacity: 1;
   position: absolute;
   background: #355bae;
   top: -35px;
