--- a/quiz.css
+++ b/quiz.css
@@ -220,4 +220,13 @@
   align-items: center;
 }
 
-
+.trailsTimer {
+  position: fixed;
+  vertical-align: middle;
+  right: 30px;
+  border: none;
+  background-color: white;
+  color: black;
+  border-radius: 50%;
+  font-size: large;
+}
