--- a/quiz.css
+++ b/quiz.css
@@ -220,6 +220,275 @@
   align-items: center;
 }
 
+body, html {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  background-color: black;
+}
+
+.question {
+  border:1.5px solid white;
+  width :400px;
+}
+
+.question-title, .question-word {
+  color: #ffd453;
+}
+.question-word, .box {
+  text-indent: 1em;
+}
+.question-word {
+  margin-left: 40px;
+  
+}
+
+.letter {
+  position:absolute;
+  top:11px;
+  left:9px;
+  font-size: 17px;
+  color: #ffd453;
+  height:23px;
+  width:23px;
+  text-align: center;
+  z-index:1;
+  background-color: black;
+  font-weight: bold;
+}
+
+.container {
+  position:relative;
+  margin-bottom: 50px;
+  margin-left: 20px;
+  width: 300px;
+}
+
+.container-img {
+  position:relative;
+  display: inline-block;
+  /* margin-bottom: 50px;
+  margin-left: 20px;
+  margin-right: 25px; */
+  margin: 0 25px 50px 20px;
+}
+
+.container:hover, .container-img:hover{
+  cursor: pointer;
+}
+
+.svg {
+  position: absolute;
+  align-items: center;
+  z-index:2;
+  transition: 0.3s;
+}
+.container > .svg , .container-img > .svg{
+  transition: 0.3s;
+}
+.container > .svg > g > path , .container-img > .svg > g > path{
+  transition: 0.3s;
+}
+
+.container:hover > .svg , .container-img:hover > .svg{
+  transform: rotate(30deg);
+}
+
+.svg_border{
+  position:absolute;
+  z-index:1;
+  top:0;
+  left:0;
+}
+
+.p_border{
+  stroke:black; 
+  stroke-width:6px; 
+  fill:#355bae00;
+}
+
+.polygon {
+  stroke:#fff4e3; 
+  stroke-width:2.5px; 
+  fill:#355bae;
+}
+
+
+.container:hover > .box:before {
+  width : 320px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-top:1.5px solid white;
+  border-left:1.5px solid white;
+}
+
+.container-img:hover > .box:before{
+  width : 145px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-top:1.5px solid white;
+  border-left:1.5px solid white;
+}
+
+
+.container:hover >.box:after {
+  width : 320px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-bottom:1.5px solid white;
+  border-right:1.5px solid white;
+}
+
+.container-img:hover > .box:after{
+  width : 145px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-bottom:1.5px solid white;
+  border-right:1.5px solid white;
+}
+
+.container:hover > .box , .container-img:hover > .box{
+  background-color: cornsilk;
+  transition: 0.3s;
+  color:#2c2c2c;
+  cursor: pointer;
+}
+
+.box {
+  position:relative;
+  top:30px;
+  left:30px;
+  z-index:0;
+  width:300px;
+  border-radius: 5px;
+  color:#ffcf91;
+  line-height: 30px;
+  transition: 0.3s;
+  font-weight: bold;
+}
+
+.container-img > .box {
+  position:relative;
+  top:30px;
+  left:30px;
+  z-index:0;
+  width: 125px;
+  border-radius: 5px;
+  color:#ffcf91;
+  line-height: 30px;
+  transition: 0.3s;
+  font-weight: bold;
+}
+
+.container-img > .box > img{
+  height: 125px;
+  width: 125px;
+  object-fit: contain;
+}
+ 
+/* 测试用 */
+.box img{ 
+  max-height: 300px;
+  width: 300px;
+  object-fit: contain;
+}
+
+.container > .box , .container-img > .box{
+  transition: 0.3s;
+}
+
+
+.box:before {
+  content:"";
+  position:absolute;
+  top:-7.5px;
+  left:-7.5px;
+  width:30px;
+  height:30px;
+  border-top:1px solid white;
+  border-left:1px solid white;
+  transition: 0.3s;
+  opacity: 0.8;
+}
+
+.box:after {
+  content:"";
+  position:absolute;
+  bottom:-7.5px;
+  right:-7.5px;
+  width:30px;
+  height:30px;
+  border-bottom:1px solid white;
+  border-right:1px solid white;
+  transition: 0.3s;
+  opacity: 0.8;
+}
+
+.choosed {
+  background-color: cornsilk;
+  transition: 0.3s;
+  color:#2c2c2c;
+  cursor: pointer;
+}
+
+.choosed-word:before {
+  width : 320px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-top:1.5px solid white;
+  border-left:1.5px solid white;
+}
+
+.choosed-word:after {
+  width : 320px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-bottom:1.5px solid white;
+  border-right:1.5px solid white;
+}
+
+.choosed-img:before {
+  width : 145px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-top:1.5px solid white;
+  border-left:1.5px solid white;
+}
+.choosed-img:after {
+  width : 145px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-bottom:1.5px solid white;
+  border-right:1.5px solid white;
+}
+
+.footer {
+  text-align: center;
+}
+.submit {
+  width: 100px;
+  margin: 20px auto;
+}
+.submit button {
+  width: 100px;
+  height: 30px;
+  font-size: 20px;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: black;
+  color: white;
+}
+.submit button:hover {
+  transition: 0.1s;
+  border: 2px solid white;
+}
+.submit button:active {
+  transition: 0.1s;
+  background-color: white;
+  color: black;
+}
+
 .trailsTimer {
   display: none;
   position: fixed;
