正误选项偏移

--- a/quiz.css
+++ b/quiz.css
@@ -85,7 +85,7 @@
   word-wrap:break-word;
   margin-top: 0px;
   margin-bottom: 10px;
-  transform: translate(26px);
+  transform: translate(20px,18px);
 }
 .trailsQuizAnsWrong {
   box-shadow: 0 0 0 2px #474747;
@@ -100,7 +100,7 @@
   word-wrap:break-word;
   margin-top: 0px;
   margin-bottom: 10px;
-  transform: translate(26px);
+  transform: translate(20px,18px);
 }
 .trailsQuizAnsSelected {
   box-shadow: 0 0 0 2px #474747;
