--- a/quiz.css
+++ b/quiz.css
@@ -4,12 +4,11 @@
   margin: 0 auto;
 }
 .question {
-  box-shadow: 2px 2px 2px 1px; 
   background: #404040;
   border-radius: 10px;
   margin-top: 60px;
   padding: 0px 20px 20px 20px;
-  transform:translate(90px);
+  transform:translate(-116px);
 }
 
 /* (B) QUESTION */
@@ -72,36 +71,6 @@
   100% {border: 4px solid #ffffff; padding: 12px;}
 }
 
-.trailsQuizAnsCorrect {
-  box-shadow: 0 0 0 2px #474747;
-  border: 2px solid #ffffff;
-  border-radius:2px;
-  color : #ffffff; 
-  background: #1caa4e;
-  padding: 15px;
-  font-size: 20px;
-  cursor: pointer;
-  max-width:600px; 
-  word-wrap:break-word;
-  margin-top: 0px;
-  margin-bottom: 10px;
-  transform: translate(20px,18px);
-}
-.trailsQuizAnsWrong {
-  box-shadow: 0 0 0 2px #474747;
-  border: 2px solid #ffffff;
-  border-radius:2px;
-  color: #ffffff;
-  background: #e00000;
-  padding: 15px;
-  font-size: 20px;
-  cursor: pointer;
-  max-width:600px; 
-  word-wrap:break-word;
-  margin-top: 0px;
-  margin-bottom: 10px;
-  transform: translate(20px,18px);
-}
 .trailsQuizAnsSelected {
   box-shadow: 0 0 0 2px #474747;
   border: 2px solid #ffffff;
@@ -124,10 +93,24 @@
   padding: 15px;
   font-size: 20px;
   cursor: pointer;
-  max-width:600px; 
+  max-width:650px; 
   word-wrap:break-word;
   margin-top: 0px;
   margin-bottom: 10px;
+}
+
+.trailsQuizResult {
+  background: #60cd86;
+  border-radius:5px;
+  color: #474747;
+  padding: 15px;
+  font-size: 20px;
+  cursor: pointer;
+  width:800px; 
+  word-wrap:break-word;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  transform:translate(-116px);
 }
 
 .result {
@@ -222,18 +205,25 @@ body, html {
 
 .question {
   border:1.5px solid white;
-  width :400px;
+  width :800px;
 }
 
 .question-title, .question-word {
   color: #ffd453;
 }
-.question-word, .box {
-  text-indent: 1em;
+.question-title {
+  padding-top: 15px;
+  font-size:18px;
+  color: #ffd453;
 }
+/* .question-word, .box {
+  text-indent: 1em;
+} */
 .question-word {
-  margin-left: 40px;
-  
+  /* margin-left: 40px; */
+  font-size:16px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .letter {
@@ -308,7 +298,7 @@ body, html {
 
 
 .container:hover > .box:before {
-  width : 320px;
+  width : 620px;
   height : calc(100% + 20px);
   opacity: 1;
   border-top:1.5px solid white;
@@ -316,7 +306,7 @@ body, html {
 }
 
 .container-img:hover > .box:before{
-  width : 145px;
+  width : 320px;
   height : calc(100% + 20px);
   opacity: 1;
   border-top:1.5px solid white;
@@ -325,7 +315,7 @@ body, html {
 
 
 .container:hover >.box:after {
-  width : 320px;
+  width : 620px;
   height : calc(100% + 20px);
   opacity: 1;
   border-bottom:1.5px solid white;
@@ -333,7 +323,7 @@ body, html {
 }
 
 .container-img:hover > .box:after{
-  width : 145px;
+  width : 320px;
   height : calc(100% + 20px);
   opacity: 1;
   border-bottom:1.5px solid white;
@@ -352,12 +342,13 @@ body, html {
   top:30px;
   left:30px;
   z-index:0;
-  width:300px;
+  width:600px;
   border-radius: 5px;
   color:#ffcf91;
   line-height: 30px;
   transition: 0.3s;
   font-weight: bold;
+  text-indent: 1em;
 }
 
 .container-img > .box {
@@ -365,19 +356,19 @@ body, html {
   top:30px;
   left:30px;
   z-index:0;
-  width: 125px;
+  max-width: 300px;
   border-radius: 5px;
   color:#ffcf91;
   line-height: 30px;
   transition: 0.3s;
   font-weight: bold;
+  text-indent: 0;
+  text-align: center;
 }
 
 .container-img > .box > img{
-  height: 125px;
-  width: 125px;
+  width: 250px;
   object-fit: contain;
-  transform: translate(-15px);
 }
  
 /* 测试用 */
@@ -425,8 +416,23 @@ body, html {
   cursor: pointer;
 }
 
+.container-img > .choosed-img{
+  color:#2c2c2c;
+}
+
+.container-img > .choosed{
+  color:#2c2c2c;
+}
+
+.choosed-word , .choosed-img {
+  background-color: cornsilk;
+  transition: 0.3s;
+  color:#2c2c2c;
+  cursor: pointer;
+}
+
 .choosed-word:before {
-  width : 320px;
+  width : 620px;
   height : calc(100% + 20px);
   opacity: 1;
   border-top:1.5px solid white;
@@ -434,7 +440,7 @@ body, html {
 }
 
 .choosed-word:after {
-  width : 320px;
+  width : 620px;
   height : calc(100% + 20px);
   opacity: 1;
   border-bottom:1.5px solid white;
@@ -442,19 +448,64 @@ body, html {
 }
 
 .choosed-img:before {
-  width : 145px;
+  width : 320px;
   height : calc(100% + 20px);
   opacity: 1;
   border-top:1.5px solid white;
   border-left:1.5px solid white;
 }
+
 .choosed-img:after {
-  width : 145px;
+  width : 320px;
   height : calc(100% + 20px);
   opacity: 1;
   border-bottom:1.5px solid white;
   border-right:1.5px solid white;
 }
+
+.choosed-word > .svg , .choosed-img > .svg{
+  transform: rotate(30deg);
+}
+
+.trailsQuizAnsCorrect {
+  /* box-shadow: 0 0 0 2px #474747;
+  border: 2px solid #ffffff;
+  border-radius:2px;
+  color : #ffffff;  */
+  background-color: #1caa4e;
+  /* padding: 15px;
+  font-size: 20px;
+  cursor: pointer;
+  max-width:600px; 
+  word-wrap:break-word;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  transform: translate(20px,18px); */
+}
+.trailsQuizAnsCorrect::before,.trailsQuizAnsCorrect::after{
+  border-color:#1caa4e;
+}
+
+.trailsQuizAnsWrong{
+  /* box-shadow: 0 0 0 2px #474747;
+  border: 2px solid #ffffff;
+  border-radius:2px;
+  color: #ffffff; */
+  background-color: #e00000;
+  /* padding: 15px;
+  font-size: 20px;
+  cursor: pointer;
+  max-width:600px; 
+  word-wrap:break-word;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  transform: translate(20px,18px); */
+}
+
+.trailsQuizAnsWrong::before,.trailsQuizAnsWrong::after{
+  border-color:#e00000;
+}
+
 
 .footer {
   text-align: center;
