--- a/quiz.css
+++ b/quiz.css
@@ -236,16 +236,9 @@ body, html {
 
 .letter {
   position:absolute;
-  top:9px;
-  left:9px;
-  font-size: 17px;
-  color: #ffd453;
-  height:23px;
-  width:23px;
-  text-align: center;
-  z-index:1;
-  background-color: black;
-  font-weight: bold;
+  z-index: 4;
+  width: 40px;
+  height: 40px;
 }
 
 .container {
@@ -255,13 +248,21 @@ body, html {
   width: 300px;
 }
 
+.img {
+  position: relative;
+  left: -16px;
+}
+
 .container-img {
-  position:relative;
+  position: relative;
   display: inline-block;
-  /* margin-bottom: 50px;
-  margin-left: 20px;
-  margin-right: 25px; */
   margin: 0 25px 50px 20px;
+}
+
+.container-img-text {
+  width: 125px;
+  text-align: center;
+  text-indent: 0;
 }
 
 .container:hover, .container-img:hover{
@@ -293,9 +294,9 @@ body, html {
 }
 
 .p_border{
-  stroke:black; 
+  stroke:#404040; 
   stroke-width:6px; 
-  fill:#355bae00;
+  fill:#404040;
 }
 
 .polygon {
@@ -347,6 +348,7 @@ body, html {
 
 .box {
   position:relative;
+  text-align: center;
   top:30px;
   left:30px;
   z-index:0;
