增加了问题的css。更改了大量css class命名，并补充了说明。

--- a/quiz.css
+++ b/quiz.css
@@ -3,38 +3,195 @@
   max-width: 600px;
   margin: 0 auto;
 }
+body {
+  background-image: url('bg.webp');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+/*Styles for question card, question title and question content. Applies to all types of questions.*/
 .question {
-  box-shadow: 2px 2px 2px 1px; 
-  background: #404040;
-  border-radius: 10px;
+  background-color: rgba(50, 50, 50, 1);  
+  box-shadow:  0 0 20px rgba(0, 0, 0, .5);
   margin-top: 60px;
   padding: 0px 20px 20px 20px;
+  width :400px;
 }
-
-/* (B) QUESTION */
-.trailsQuizQn {
+.question-number{
+  /*box-shadow: 3px 3px 0px 2px #474747;*/
+  opacity: 1;
   position: relative;
-  background: #4c93ba00;
-  padding: 0px;
-  color: #ffffff;
-  font-size: 24px;
+  background: #355bae;
+  left: -20px;
+  color: #FFE5B4;
+  text-align: center;
+  width: 80px;
+  height: 21px;
+  font-size: 15px;
+  font-weight: bold;
+}
+.question-text {
+  text-indent: 1em;
+  margin: 20px 20px 20px 20px;
+  color: #ffcf91;
+  font-weight: bold;
 }
 
-.qnContainer {
-  padding: 15px 20px 10px 20px;
-  background: #ffffff00;
-  border-bottom:#bbbbbb solid;
-  border-width: 1px;
+/*Styles for multiple choice answers.*/
+
+/*default state*/
+.mc-ans-container {
+  position:relative;
+  margin-bottom: 50px;
+  margin-left: 20px;
+  width: 300px;
+}
+.svg-gear {
+  position: absolute;
+  align-items: center;
+  z-index:2;
+  transition: 0.3s;
+}
+.svg-bg{
+  position:absolute;
+  z-index:1;
+  top:0;
+  left:0;
+}
+.svg-poly{
+  stroke:rgba(50, 50, 50, 1); 
+  stroke-width:6px; 
+  fill:rgba(50, 50, 50, 1); 
+}
+.mc-ans-box {
+  position:relative;
+  text-align: center;
+  top:30px;
+  left:30px;
+  z-index:0;
+  width:310px;
+  border-radius: 5px;
+  line-height: 30px;
+  color: #ffcf91;
+  transition: 0.3s;
+  font-weight: bold;
+}
+.mc-ans-box:before {
+  content:"";
+  position:absolute;
+  top:-7.5px;
+  left:-7.5px;
+  width:30px;
+  height:30px;
+  border-top:1px solid white;
+  border-left:1px solid white;
+  transition: 0.3s;
+  opacity: 0.8;
+}
+.mc-ans-box:after {
+  content:"";
+  position:absolute;
+  bottom:-7.5px;
+  right:-7.5px;
+  width:30px;
+  height:30px;
+  border-bottom:1px solid white;
+  border-right:1px solid white;
+  transition: 0.3s;
+  opacity: 0.8;
 }
 
-/* (C) ANSWERS */
-.trailsQuizAns {
-  margin: 10px 0;
-  /*display: grid;*/
-  /*grid-template-columns: auto auto;*/
-  /*grid-gap: 10px;*/
+/*hover state*/
+.mc-ans-container:hover > .svg-gear , .container-img:hover > .svg-gear{
+  transform: rotate(30deg);
 }
-/* .trailsQuizAns input[type=radio] { display: none; } */
+.mc-ans-container:hover, .container-img:hover{
+  cursor: pointer;
+}
+.mc-ans-container:hover > .mc-ans-box:before {
+  width : 330px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-top:1.5px solid white;
+  border-left:1.5px solid white;
+}
+.container-img:hover > .mc-ans-box:before{
+  width : 145px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-top:1.5px solid white;
+  border-left:1.5px solid white;
+}
+.mc-ans-container:hover >.mc-ans-box:after {
+  width : 330px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-bottom:1.5px solid white;
+  border-right:1.5px solid white;
+}
+.container-img:hover > .mc-ans-box:after{
+  width : 145px;
+  height : calc(100% + 20px);
+  opacity: 1;
+  border-bottom:1.5px solid white;
+  border-right:1.5px solid white;
+}
+.mc-ans-container:hover > .mc-ans-box , .container-img:hover > .mc-ans-box{
+  background-color: cornsilk;
+  transition: 0.3s;
+  color:#2c2c2c;
+  cursor: pointer;
+}
+.mc-ans-container > .svg-gear , .container-img > .svg-gear{
+  transition: 0.3s;
+}
+.mc-ans-container > .svg-gear > g > path , .container-img > .svg-gear > g > path{
+  transition: 0.3s;
+}
+
+/*selected state*/
+.svg-gear-selected {
+  transform: rotate(30deg);
+  position: absolute;
+  align-items: center;
+  z-index:2;
+  transition: 0.3s;
+}
+.mc-ans-box-selected {
+  position:relative;
+  text-align: center;
+  top:30px;
+  left:30px;
+  z-index:0;
+  width:310px;
+  border-radius: 5px;
+  line-height: 30px;
+  transition: 0.3s;
+  font-weight: bold;
+}
+.mc-ans-box-selected:before {
+  content:"";
+  position:absolute;
+  top:-7.5px;
+  left:-7.5px;
+  width:330px;
+  height:50px;
+  border-top:1px solid white;
+  border-left:1px solid white;
+  opacity: 0.8;
+}
+.mc-ans-box-selected:after {
+  content:"";
+  position:absolute;
+  bottom:-7.5px;
+  right:-7.5px;
+  width:330px;
+  height:50px;
+  border-bottom:1px solid white;
+  border-right:1px solid white;
+  opacity: 0.8;
+}
 
 .trailsQuizAnsUnselected {
   box-shadow: 0 0 0 2px #47474700;
@@ -176,19 +333,7 @@
   text-align: center;
 }
 
-.quizNumber{
-  box-shadow: 3px 3px 0px 2px #474747;
-  opacity: 1;
-  position: absolute;
-  background: #355bae;
-  top: -35px;
-  left: 10px;
-  color: #ffffff;
-  text-align: center;
-  width: 100px;
-  height: 30px;
-  font-size: 15px;
-}
+
 
 .result{
   box-shadow: 3px 3px 0px 2px #474747;
@@ -218,39 +363,12 @@ body, html {
   background-color: black;
 }
 
-.question {
-  border:1.5px solid white;
-  width :400px;
-}
-
-.question-title, .question-word {
-  color: #ffd453;
-}
-.question-word, .box {
-  text-indent: 1em;
-}
-.question-word {
-  margin-left: 40px;
-  
-}
 
 .letter {
   position:absolute;
   z-index: 4;
   width: 40px;
   height: 40px;
-}
-
-.container {
-  position:relative;
-  margin-bottom: 50px;
-  margin-left: 20px;
-  width: 300px;
-}
-
-.img {
-  position: relative;
-  left: -16px;
 }
 
 .container-img {
@@ -265,39 +383,9 @@ body, html {
   text-indent: 0;
 }
 
-.container:hover, .container-img:hover{
-  cursor: pointer;
-}
 
-.svg {
-  position: absolute;
-  align-items: center;
-  z-index:2;
-  transition: 0.3s;
-}
-.container > .svg , .container-img > .svg{
-  transition: 0.3s;
-}
-.container > .svg > g > path , .container-img > .svg > g > path{
-  transition: 0.3s;
-}
 
-.container:hover > .svg , .container-img:hover > .svg{
-  transform: rotate(30deg);
-}
 
-.svg_border{
-  position:absolute;
-  z-index:1;
-  top:0;
-  left:0;
-}
-
-.p_border{
-  stroke:#404040; 
-  stroke-width:6px; 
-  fill:#404040;
-}
 
 .polygon {
   stroke:#fff4e3; 
@@ -305,62 +393,7 @@ body, html {
   fill:#355bae;
 }
 
-
-.container:hover > .box:before {
-  width : 320px;
-  height : calc(100% + 20px);
-  opacity: 1;
-  border-top:1.5px solid white;
-  border-left:1.5px solid white;
-}
-
-.container-img:hover > .box:before{
-  width : 145px;
-  height : calc(100% + 20px);
-  opacity: 1;
-  border-top:1.5px solid white;
-  border-left:1.5px solid white;
-}
-
-
-.container:hover >.box:after {
-  width : 320px;
-  height : calc(100% + 20px);
-  opacity: 1;
-  border-bottom:1.5px solid white;
-  border-right:1.5px solid white;
-}
-
-.container-img:hover > .box:after{
-  width : 145px;
-  height : calc(100% + 20px);
-  opacity: 1;
-  border-bottom:1.5px solid white;
-  border-right:1.5px solid white;
-}
-
-.container:hover > .box , .container-img:hover > .box{
-  background-color: cornsilk;
-  transition: 0.3s;
-  color:#2c2c2c;
-  cursor: pointer;
-}
-
-.box {
-  position:relative;
-  text-align: center;
-  top:30px;
-  left:30px;
-  z-index:0;
-  width:300px;
-  border-radius: 5px;
-  color:#ffcf91;
-  line-height: 30px;
-  transition: 0.3s;
-  font-weight: bold;
-}
-
-.container-img > .box {
+.container-img > .mc-ans-box {
   position:relative;
   top:30px;
   left:30px;
@@ -373,49 +406,18 @@ body, html {
   font-weight: bold;
 }
 
-.container-img > .box > img{
+.container-img > .mc-ans-box > img{
   height: 125px;
   width: 125px;
   object-fit: contain;
 }
- 
-/* 测试用 */
-.box img{ 
-  max-height: 300px;
-  width: 300px;
-  object-fit: contain;
-}
 
-.container > .box , .container-img > .box{
+.mc-ans-container > .mc-ans-box , .container-img > .mc-ans-box{
   transition: 0.3s;
 }
 
 
-.box:before {
-  content:"";
-  position:absolute;
-  top:-7.5px;
-  left:-7.5px;
-  width:30px;
-  height:30px;
-  border-top:1px solid white;
-  border-left:1px solid white;
-  transition: 0.3s;
-  opacity: 0.8;
-}
 
-.box:after {
-  content:"";
-  position:absolute;
-  bottom:-7.5px;
-  right:-7.5px;
-  width:30px;
-  height:30px;
-  border-bottom:1px solid white;
-  border-right:1px solid white;
-  transition: 0.3s;
-  opacity: 0.8;
-}
 
 .choosed {
   background-color: cornsilk;
@@ -423,37 +425,50 @@ body, html {
   color:#2c2c2c;
   cursor: pointer;
 }
-
-.choosed-word:before {
-  width : 320px;
+.choosed:before {
+  width : 330px;
   height : calc(100% + 20px);
-  opacity: 1;
   border-top:1.5px solid white;
   border-left:1.5px solid white;
 }
 
-.choosed-word:after {
-  width : 320px;
+.choosed:after {
+  width : 330px;
   height : calc(100% + 20px);
-  opacity: 1;
   border-bottom:1.5px solid white;
   border-right:1.5px solid white;
+}
+
+
+.choosed-img {
+  background-color: cornsilk;
+  transition: 0.3s;
+  color:#2c2c2c;
+  cursor: pointer;
+}
+
+.choosed-text {
+  width: 125px;
+  text-align: center;
+  text-indent: 0;
+  transition: 0.3s;
+  color:#2c2c2c;
 }
 
 .choosed-img:before {
   width : 145px;
   height : calc(100% + 20px);
-  opacity: 1;
   border-top:1.5px solid white;
   border-left:1.5px solid white;
 }
+
 .choosed-img:after {
   width : 145px;
   height : calc(100% + 20px);
-  opacity: 1;
   border-bottom:1.5px solid white;
   border-right:1.5px solid white;
 }
+
 
 .footer {
   text-align: center;
