--- a/quiz.css
+++ b/quiz.css
@@ -87,8 +87,9 @@ body {
 .svg-gear {
   position: absolute;
   align-items: center;
-  z-index:2;
-  transition: 0.3s;
+  z-index: 2;
+  height: 40px;
+  width: 40px;
 }
 .svg-bg{
   position:absolute;
