--- a/quiz.css
+++ b/quiz.css
@@ -220,7 +220,7 @@ body {
 .mc-ans-selected-img {
   background-color: cornsilk;
   transition: 0.3s;
-  color:#2c2c2c;
+  color:#2c2c2c !important;
   cursor: pointer;
 }
 .mc-ans-selected-img:before {
