--- a/quiz.css
+++ b/quiz.css
@@ -1,10 +1,10 @@
 /* (A) WRAPPER */
 #quizWrap {
-  max-width: 600px;
+  max-width: 80%;
   margin: 0 auto;
 }
 body {
-  background-image: url('bg.webp');
+  background-image: url('https://alioss.trails-game.com/images/quiz/bg.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -17,21 +17,24 @@ body {
 /*Styles for question card, question title and question content. Applies to all types of questions.*/
 .question {
   background-color: rgba(50, 50, 50, 1);  
-  box-shadow:  0 0 20px rgba(0, 0, 0, .5);
-  margin-top: 60px;
-  padding: 0px 20px 20px 20px;
-  width :400px;
+  box-shadow:  0 0 3% rgba(0, 0, 0, .5);
+  margin-top: 9%;
+  padding: 0 3% 3% 3%;
+  width :80%;
 }
 .question-number{
   /*box-shadow: 3px 3px 0px 2px #474747;*/
   opacity: 1;
   position: relative;
   background: #355bae;
-  left: -20px;
   color: #FFE5B4;
-  text-align: center;
-  width: 80px;
-  height: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: -5%;
+  width: 30%;
+  max-width: 80px;
+  height: 20px;
   font-size: 15px;
   font-weight: bold;
 }
@@ -47,23 +50,28 @@ body {
   width: 40px;
   height: 40px;
 }
+.ans-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 
 /*Styles for multiple choice answers.*/
 
 /*default state*/
 .mc-ans-container {
   position:relative;
-  margin-bottom: 50px;
-  margin-left: 20px;
-  width: 300px;
+  margin: 0 5% 50px 5%;
+  width: 80%;
 }
 .mc-img-ans-container {
   position: relative;
-  display: inline-block;
-  margin: 0 25px 50px 20px;
+  margin: 0 5% 50px 5%;
+  width: 40%;
 }
 .mc-img-ans-container-text {
-  width: 125px;
+  width: 40%;
   text-align: center;
   text-indent: 0;
 }
@@ -72,7 +80,7 @@ body {
   top:30px;
   left:30px;
   z-index:0;
-  width: 125px;
+  width: 80%;
   border-radius: 5px;
   color:#ffcf91;
   line-height: 30px;
@@ -80,8 +88,8 @@ body {
   font-weight: bold;
 }
 .mc-img-ans-container > .mc-ans-box > img{
-  height: 125px;
-  width: 125px;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 .svg-gear {
@@ -108,7 +116,7 @@ body {
   top:30px;
   left:30px;
   z-index:0;
-  width:310px;
+  width:80%;
   border-radius: 5px;
   line-height: 30px;
   color: #ffcf91;
@@ -148,28 +156,28 @@ body {
   cursor: pointer;
 }
 .mc-ans-container:hover > .mc-ans-box:before {
-  width : 330px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   opacity: 1;
   border-top:1.5px solid white;
   border-left:1.5px solid white;
 }
 .mc-img-ans-container:hover > .mc-ans-box:before{
-  width : 145px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   opacity: 1;
   border-top:1.5px solid white;
   border-left:1.5px solid white;
 }
 .mc-ans-container:hover >.mc-ans-box:after {
-  width : 330px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   opacity: 1;
   border-bottom:1.5px solid white;
   border-right:1.5px solid white;
 }
 .mc-img-ans-container:hover > .mc-ans-box:after{
-  width : 145px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   opacity: 1;
   border-bottom:1.5px solid white;
@@ -206,13 +214,13 @@ body {
   cursor: pointer;
 }
 .mc-ans-selected:before {
-  width : 330px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   border-top:1.5px solid white;
   border-left:1.5px solid white;
 }
 .mc-ans-selected:after {
-  width : 330px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   border-bottom:1.5px solid white;
   border-right:1.5px solid white;
@@ -224,13 +232,13 @@ body {
   cursor: pointer;
 }
 .mc-ans-selected-img:before {
-  width : 145px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   border-top:1.5px solid white;
   border-left:1.5px solid white;
 }
 .mc-ans-selected-img:after {
-  width : 145px;
+  width : calc(100% + 20px);
   height : calc(100% + 20px);
   border-bottom:1.5px solid white;
   border-right:1.5px solid white;
@@ -278,20 +286,7 @@ body {
   color: black;
 }
 
-.trailsTimer {
-  display: none;
-  position: fixed;
-  vertical-align: middle;
-  right: 30px;
-  border: none;
-  background-color: white;
-  color: black;
-  border-radius: 50%;
-  font-size: large;
-  padding: 40px;
-}
-
-.trailsQuizExplain {
+.ans-explanation {
   background: #60cd86;
   border-radius:5px;
   color: #474747;
@@ -304,27 +299,24 @@ body {
   margin-bottom: 10px;
 }
 
-.trailsQuizResult {
+.quiz-result {
   background: #60cd86;
-  border-radius:5px;
+  border-radius: 5px;
   color: #474747;
-  padding: 15px;
+  padding: 2% 2%;
+  width: 80%;
   font-size: 20px;
   cursor: pointer;
-  width:800px; 
   word-wrap:break-word;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  transform:translate(-116px);
 }
 
 .base-timer {
-  width: 185px;
+  width: 20%;
   position: fixed;
   vertical-align: middle;
-  top:200px;
-  right: 50px;
-  padding: 40px;
+  top:25%;
+  right: 5%;
+  padding: 3%;
 }
 
 .base-timer__svg {
@@ -365,11 +357,11 @@ body {
 
 .base-timer__label {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+  transform: translate(-50%, -60%);
   color:white;
-  top:78px;
-  left:54px;
-  width: 80px;
-  height: 80px;
-  font-size: 28px;
+  font-size: clamp(14px, 2vmax, 28px);
   text-align: center;
 }
