--- a/quiz.css
+++ b/quiz.css
@@ -293,7 +293,7 @@ body {
   padding: 15px;
   font-size: 20px;
   cursor: pointer;
-  max-width:650px; 
+  width: 100%; 
   word-wrap:break-word;
   margin-top: 0px;
   margin-bottom: 10px;
