--- a/quiz.css
+++ b/quiz.css
@@ -40,9 +40,29 @@ body {
 }
 .question-text {
   text-indent: 1em;
-  margin: 20px 20px 20px 20px;
+  margin: 0 5% 20px 5%;
   color: #ffcf91;
   font-weight: bold;
+}
+.question-img {
+  width: 100%;
+  margin: 0 1% 20px 1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.question-img > img {
+  max-width: 80%;
+}
+.question-music {
+  margin: 0 0 20px 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.question-music > audio {
+  width: 80%;
 }
 
 .ans-container {
